--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
+    "lucide-svelte": "^0.479.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.14"
   }
