--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tailwindcss/vite": "^4.0.14",
     "lucide-svelte": "^0.479.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "svelte-sonner": "^0.3.28",
     "tailwindcss": "^4.0.14"
   }
 }
