ci: Prettier & Eslint Workflows

--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview",
     "prepare": "svelte-kit sync || echo ''",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "checkformat": "prettier --check .",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "format": "prettier --write .",
-    "lint": "prettier --check . && eslint ."
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
